log/knet1_tfp59_pools_190129_1627
  File "train_drone.py", line 415
    (90, 121, -11), (57, 122, -11), (36, 122, -11), (11, 122, -11), (5, 134, -11), (5, 89, -11), 5, 52, -11), (4, 17, -11)]
                                                                                                           ^
SyntaxError: invalid syntax
